# glotin_Ilya_contour

./: CMakeLists.txt  Cours.cpp  README.md  classifyContour.cpp  openCVproject2.sln  openCVproject2.vcxproj
